Added conditions for platform supported translucency. (#8)
ChooserBox background options showing based on platform.
ChooserBox slider enabling based on translucency support.
Removed deprecated methods upto java 21.